# win32_template

./: .gitignore  CMakeLists.txt
src/: BorderlessWindow.cpp  BorderlessWindow.hpp  TrayWindow.cpp  TrayWindow.h  main.cpp  pch.h
